[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-recon-env"
version = "0.1.0"
description = "GST Invoice Reconciliation OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
"fastapi>=0.104.0",
"uvicorn>=0.23.0",
"pydantic>=2.0.0",
"openenv-core>=0.2.0",
"openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"
