# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-gst_recon_env"
version = "0.1.0"
description = "Gst Recon Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv==0.1.13",
    "openenv-core>=0.2.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m gst_recon_env.server.app
server = "gst_recon_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["gst_recon_env", "gst_recon_env.server"]
package-dir = { "gst_recon_env" = ".", "gst_recon_env.server" = "server" }
